Changelog for MediaManager.

MediaManager 0.3.2
====================================
- Replace acute symbols with single quotes in lexicon files (fixes #54)
- Fix mediamanager styling when used in popup (fixes #55)
- Add support for MODX3 (PR #53, thanks to rtripault)

MediaManager 0.3.1
====================================
- Fixed Metadata required fields validation message shows key instead of label value #52
- Fixed ACLs - Mediasource and User Permissions #51
- Improved Archiving and Replacing visual interface confusing #50
- Fixed Content Blocks Image Gallery type not saving link in database #47

MediaManager 0.3.0
====================================
- Escape new reserved words for MySQL 8+ (#38)
- Added indexes on database columns
- Improved error handling during file upload and file edit
- Added option to add predefined set of meta fields
- Added optional image licensing feature
- PHP 8 compatibility fixes
- Fixed compatibility with recent version of TinyMCE RTE using the callback

MediaManager 0.2.9
====================================
- Fix load modPhpThumb for previews (#15)

MediaManager 0.2.8
====================================
- Fix replacing images used in ContentBlocks fields (#31)
- Add linked resource ID in preview popup (#24)

MediaManager 0.2.7
====================================
- Fix Archive & Replace feature for TV and ContentBlocks field

MediaManager 0.2.6
====================================
- Check file existing on archive and unarchive (#27)
- Delete versions and thumbnails for deleted files (#33)
- Fix setting value if TV not found (#34)

MediaManager 0.2.5
====================================
- Fix after adding images to pages, no link reference getting shown in backend GUI (#24)
- Fix MODX Resource / Elements visibility toggle button not working (#26)
- Fix deleting an image was not successful (#27)
- Fix when opening the preview window on an image, MODX logs some errors (#28)